fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
     font-size: 16px;
     line-height: 1.6;
     background: black;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 /* ************ flipping cards & hover ************** */
@@ -135,14 +135,18 @@ body {
     /* will-change: transform; */
 }
 
-.arrow-wrapper {
+.header {
     position: relative;
+}
+
+.arrow-wrapper {
+    position: absolute;
     width: 0;
     /* background-color: greenyellow; */
     z-index: 1;
     display: none;
     align-items: center;
-    top: -100vh;
+    /* top: -100vh; */
     height: 100vh;
 }
 
@@ -166,9 +170,10 @@ body {
 }
 
 .arrow-right {
+    position: relative;
     left: 100vw;
-    margin-left: -120px;
-    padding-left: 30px;
+    margin-left: -100px;
+    padding-left: 0;
     /* left: calc(100vw-200px); */
 }
 
